--- a/build.gradle
+++ b/build.gradle
@@ -35,9 +35,9 @@ configurations.all {
 
 dependencies {
     compile(
-//        libs.awsServerlessJavaContainer,
         libs.aws.lambda,
         libs.javax.servletApi,
+        libs.javax.wsRsApi,
         libs.jodaTime,
         libs.guava,
         libs.jackson,
