--- a/libs.gradle
+++ b/libs.gradle
@@ -23,7 +23,8 @@ ext.libs = [
                 jcloverslf4j: 'org.slf4j:jcl-over-slf4j:1.7.7'
         ],
         javax   : [
-                servletApi: 'javax.servlet:javax.servlet-api:3.0.1'
+                servletApi: 'javax.servlet:javax.servlet-api:3.0.1',
+                wsRsApi: 'javax.ws.rs:javax.ws.rs-api:2.1-m01'
         ],
         test    : [
                 testng: 'org.testng:testng:6.8.21',
