--- a/articles.yaml
+++ b/articles.yaml
@@ -1,13 +1,13 @@
 AWSTemplateFormatVersion: '2010-09-09'
 Transform: AWS::Serverless-2016-10-31
-Description: Example Pet Store API written with spring with the aws-serverless-java-container library
+Description: Example Article API written with Spring with the aws-serverless-java-container library
 Resources:
-  PetStoreFunction:
+  ArticleFunction:
     Type: AWS::Serverless::Function
     Properties:
       Handler: com.amazonaws.serverless.sample.spring.LambdaHandler::handleRequest
       Runtime: java8
-      CodeUri: target/serverless-spring-example-1.0-SNAPSHOT.jar
+      CodeUri: build/libs/serverless-spring-boilerplate-1.0.jar
       MemorySize: 512
       Policies: AWSLambdaBasicExecutionRole
       Timeout: 20
@@ -19,8 +19,8 @@ Resources:
             Method: any
 
 Outputs:
-  SpringPetStoreApi:
+  ArticleApi:
     Description: URL for application
-    Value: !Sub 'https://${ServerlessRestApi}.execute-api.${AWS::Region}.amazonaws.com/Prod/pets'
+    Value: !Sub 'https://${ServerlessRestApi}.execute-api.${AWS::Region}.amazonaws.com/Prod/articles'
     Export:
-      Name: SpringPetStoreApi
+      Name: ArticleApi
