--- a/libs.gradle
+++ b/libs.gradle
@@ -1,39 +1,22 @@
 ext.versions = [
         spring: '4.3.5.RELEASE',
-        awsServerlessJavaContainer: '0.2',
+        awsServerlessJavaContainer: '0.8',
 ]
 
 ext.libs = [
-        aws:    [
-            lambda: 'com.amazonaws:aws-lambda-java-core:1.1.0'
-        ],
         awsServerlessJavaContainer: [
-                core: "com.amazonaws.serverless:aws-serverless-java-container-core:${versions.awsServerlessJavaContainer}",
                 spring: "com.amazonaws.serverless:aws-serverless-java-container-spring:${versions.awsServerlessJavaContainer}"
         ],
-        jodaTime: 'joda-time:joda-time:2.7',
         guava   : 'com.google.guava:guava:18.0',
         jackson: 'com.fasterxml.jackson.core:jackson-databind:2.5.0',
-        apacheCommons: [
-                lang3: "org.apache.commons:commons-lang3:3.3.2",
-                io: 'commons-io:commons-io:2.4',
-                fileUpload: 'commons-fileupload:commons-fileupload:1.3.1',
-        ],
-        spring  : [
-                webmvc: "org.springframework:spring-webmvc:${versions.spring}"
-        ],
-        logging : [
-                logback     : 'ch.qos.logback:logback-classic:1.1.2',
-                jcloverslf4j: 'org.slf4j:jcl-over-slf4j:1.7.7'
-        ],
-        javax   : [
-                servletApi: 'javax.servlet:javax.servlet-api:3.0.1',
-                wsRsApi: 'javax.ws.rs:javax.ws.rs-api:2.1-m01'
+        logging: [
+                slf4j: "org.slf4j:slf4j-log4j12:1.7.21",
+                lambdaLog4j: "com.amazonaws:aws-lambda-java-log4j:1.0.0"
         ],
         test    : [
                 testng: 'org.testng:testng:6.8.21',
                 festAssert: 'org.easytesting:fest-assert-core:2.0M10',
-                spring    : "org.springframework:spring-test:${versions.spring}"
-
+                spring    : "org.springframework:spring-test:${versions.spring}",
+                lang3: "org.apache.commons:commons-lang3:3.3.2"
         ]
 ]
